@@ -2,6 +2,8 @@
 # This file is updated with Maddlog
 
 * Tue Jul 19 2016 Stefan Manegold <Stefan.Manegold@cwi.nl>
+- With OID size equal to ABI/word size, mserver5 does not need to print
+  the OID size, anymore.
 - Removed obsolete code associated with long gone static linking option.
 
 * Mon Jul 18 2016 Sjoerd Mullender <sjoerd@acm.org>
